--- a/workspaces/server/index.admin.html
+++ b/workspaces/server/index.admin.html
@@ -11,7 +11,7 @@
     />
     <title>WSH 2024</title>
     <link as="image" crossorigin="anonymous" href="/assets/cyber-toon.svg" rel="preload" />
-    <script type="text/javascript" src="/client.global.js" defer></script>
+    <script type="text/javascript" src="/admin.global.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
